# runwasi-kind-workloads

./: README.md  deployment.yaml
sleep-wasm/: Cargo.toml  Dockerfile
sleep-wasm/src/: main.rs
