[package]
name = "sleep-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.35.0", features = ["bitflags"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:sleep-wasm"

[package.metadata.component.dependencies]
